unit testing, bug fix of the placing of the content, added buttons for expand en collapse and added a scroll to so the highlight is always on the page

--- a/fitnesse/resources/bootstrap-plus/less/dark/customize.less
+++ b/fitnesse/resources/bootstrap-plus/less/dark/customize.less
@@ -1377,12 +1377,30 @@ kbd {
 /* Sidebar */
 
 #sidebar {
+  display: flex;
+  flex-direction: column;
   width: 300px;
   min-width: 300px;
   max-width: 300px;
   height: 100%;
   background-color: #464646;
   border-right: 1px solid #292929;
+}
+
+.buttonSidbarDiv {
+  display: flex;
+  padding: 10px 15px 0;
+
+  li {
+    display: inline;
+    .btn;
+    .btn-default;
+    .btn-xs;
+  }
+}
+
+.expandAllSidebar {
+  margin-left: auto !important;
 }
 
 #highlight {
@@ -1400,6 +1418,7 @@ kbd {
   overflow: auto;
   white-space: nowrap;
   display: flex;
+  margin-bottom: 0;
 }
 
 #sidebarContent li {
